<resources>
    <string name="app_name">TaskList</string>
    <string name="task_name">Task name</string>
    <string name="task_desc">Task description</string>
    <string name="add_task">Add task</string>
    <string name="task_name_det">Task Name:</string>
    <string name="task_desc_det">Task description:</string>
    <string name="task_completed">Task completed:</string>
    <string name="remove">Remove task</string>
    <string name="name_required">Task name is required!</string>
    <string name="name_unique">Task name must be unique!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>
